--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>귀여운 영어 단어 챗봇</title>
+  <title>영어 단어 어원 박사</title>
   <style>
     body {
       font-family: 'Arial', sans-serif;
